--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -9,14 +9,14 @@
 
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=CS-051-DT-WS\\SQLEXPRESS;Initial Catalog=Employee;Persist Security Info=False;User ID=sa;Password=c@b0t123;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
-    "DefaultConnection": "Server=krishna123.database.windows.net;Initial Catalog=Employee;Persist Security Info=False;User ID=saDemo;Password=c@b0t123;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
+    //"DefaultConnection": "Server=;Initial Catalog=Employee;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
+    "DefaultConnection": "Server=;Initial Catalog=Employee;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
 
   },
   "Host": {
     "Name": "http://localhost:51185",
-    //"DefaultConnection": "Server=CS-051-DT-WS\\SQLEXPRESS;Initial Catalog=Employee;Persist Security Info=False;User ID=sa;Password=c@b0t123;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
-    "DefaultConnection": "Server=krishna123.database.windows.net;Initial Catalog=Employee;Persist Security Info=False;User ID=saDemo;Password=c@b0t123;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
+    //"DefaultConnection": "Server=;Initial Catalog=Employee;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
+    "DefaultConnection": "Server=;Initial Catalog=Employee;Persist Security Info=False;User ID=;Password=;MultipleActiveResultSets=False;Encrypt=True;Connection Timeout=30; TrustServerCertificate=True"
 
   }
 }
